base/deployment_api.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: myapp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-api
  template:
    metadata:
      labels:
        app: myapp-api
    spec:
      containers:
        - name: api
          image: chonyasdasy/calculator_api:latest
          ports:
          - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 1
            periodSeconds: 10
